tests/parser/tests/cases/should_fail/missing_comma_in_struct_field/case.stderr
error: failed to parse
 --> $DIR/case.hash:5:5
4 |       has_brother = true // <--- Error should be reported here since there is no comma....
5 |       age = 12, 
  |       ^^^ here
6 |       gender = false
  = note: unexpectedly encountered the identifier `age`.
  = help: consider adding a `,`
